tdf#121069, tdf#121469 migrate special characters

dbahsql: Decode UTF8 characters stored as unicode code point values in
schema file.

Change-Id: I90db2345a6de9bee7aae8ae6a7c046a03eebc0a7
Reviewed-on: https://gerrit.libreoffice.org/67197
Tested-by: Jenkins
Reviewed-by: Tamás Bunth <btomi96@gmail.com>
(cherry picked from commit 2ec13411b7e7b18d1ea28faee9ad93e0b7b21dde)