dbaccess/source/filter/hsqldb/createparser.cxx
@@ -28,42 +28,6 @@ using namespace css::sdbc;
 
 namespace
 {
-//Find ascii escaped unicode
-sal_Int32 lcl_IndexOfUnicode(const OString& rSource, const sal_Int32 nFrom = 0)
-{
-    const OString sHexDigits = "0123456789abcdefABCDEF";
-    sal_Int32 nIndex = rSource.indexOf("\\u", nFrom);
-    if (nIndex == -1)
-    {
-        return -1;
-    }
-    bool bIsUnicode = true;
-    for (short nDist = 2; nDist <= 5; ++nDist)
-    {
-        if (sHexDigits.indexOf(rSource[nIndex + nDist]) == -1)
-        {
-            bIsUnicode = false;
-        }
-    }
-    return bIsUnicode ? nIndex : -1;
-}
-
-//Convert ascii escaped unicode to utf-8
-OUString lcl_ConvertToUTF8(const OString& original)
-{
-    OString sResult = original;
-    sal_Int32 nIndex = lcl_IndexOfUnicode(sResult);
-    while (nIndex != -1 && nIndex < original.getLength())
-    {
-        const OString sHex = original.copy(nIndex + 2, 4);
-        const sal_Unicode cDec = static_cast<sal_Unicode>(strtol(sHex.getStr(), nullptr, 16));
-        const OString sNewChar = OString(&cDec, 1, RTL_TEXTENCODING_UTF8);
-        sResult = sResult.replaceAll("\\u" + sHex, sNewChar);
-        nIndex = lcl_IndexOfUnicode(original, nIndex + 1);
-    }
-    return OStringToOUString(sResult, RTL_TEXTENCODING_UTF8);
-}
-
 /// Returns substring of sSql from the first occurrence of '(' until the
 /// last occurrence of ')' (excluding the parenthesis)
 OUString lcl_getColumnPart(const OUString& sSql)
@@ -281,7 +245,6 @@ void CreateStmtParser::parseColumnPart(const OUString& sColumnPart)
         ColumnTypeParts typeParts = lcl_getColumnTypeParts(sFullTypeName);
 
         bool bCaseInsensitive = typeParts.typeName.indexOf("IGNORECASE") >= 0;
-        rColumnName = lcl_ConvertToUTF8(OUStringToOString(rColumnName, RTL_TEXTENCODING_UTF8));
         bool isPrimaryKey = lcl_isPrimaryKey(sColumn);
 
         if (isPrimaryKey)
